2004-08-20  Chris Kelly <ckdake@users.sf.net> 1.4.5-cvs-b125

	* Change:  different div tags in login.php as well as centered text 
		boxes.  This is a temporary fix until the full review of
		ideas for CSS is finished.

2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b124

	* Change:  Minor wording changes

2004-08-19  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.5-cvs-b123

	* GR protocol: now returning the max image size for albums in addition
	  to the intermediate size.
	* gallery_remote2.php: removed output buffering.

2004-08-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b122

        * Fix: Make doubly-sure that we're setting mambo session vars when
          embedded, to prevent the 'No info' error.

2004-08-19  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b121

	* Fix: Typos.

2004-08-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b120

	* Change: Extra whitespace in despam-comments

	* Fix: Missing echo in save_photos

	* Change: Prevent non-admin users from changing their own usernames via user
	  preferences

	* Change: Use & refs in get*Vars to save a miniscule amount of memory

2004-08-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b119

	* Fix: Added a setup option for "slowPhotoCount".  The accurate photo count
	  on the Gallery index page was a much requested change, however it proved to
	  be so slow on some machines/Galleries that this will disable it unless
	  explicitly enabled by the user during setup.  (Galleries with vast numbers
	  of albums or images could take as long as 30 seconds to load the index, by
	  user reports)

2004-08-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b118

	* Fix: Variable ordering bug in user_preferences

2004-08-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b117

        * Fix: Navigation bar width was dependant on whether images were resized or not...